First 'working' version

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -54,7 +54,7 @@ Ext.define('Niks.Apps.listExporter.app', {
     _taskStates: [],
     _tcStates: [],
     _piStates: [],
-
+    _outstanding: 0,
     _nodes: [],
 
     _recordsToProcess: [],
@@ -248,7 +248,6 @@ EXPORT_FIELD_LIST:
 
     //Entry point for export
     _exportCSV: function(rs) {
-        debugger;
         Ext.create("Niks.Apps.TreeExporter").exportCSV(gApp._createTree(gApp._nodes));
         gApp.setLoading(false);
     },
@@ -281,7 +280,6 @@ EXPORT_FIELD_LIST:
                                     itemId: 'piType',
                                     fieldLabel: 'Choose Portfolio Type :',
                                     labelWidth: 150,
-                                    allowClear: true,
                                     margin: '5 0 5 20',
                                     storeConfig: {
                                         fetch: ['DisplayName', 'ElementName','Ordinal','Name','TypePath', 'Attributes'],
@@ -331,7 +329,10 @@ EXPORT_FIELD_LIST:
 
     _addGridboard: function(store, modelNames) {
 
-        this.gridboard = gApp.down('#displayBox').add({
+        var grid = gApp.down('rallygridboard');
+        if (grid) { grid.destroy();}
+
+        gApp.down('#displayBox').add({
             xtype: 'rallygridboard',
             context: gApp.getContext(),
             modelNames: modelNames,
@@ -407,7 +408,20 @@ EXPORT_FIELD_LIST:
     /** Threads can be Asleep or Busy. This state is only changed in the app not in the worker
      * as a result of the messages coming back from the worker.
      * 
+     * Threads are a separate context, so we need to send a message back to the app to keep the counts
+     *  in sync
      */
+
+     listeners: {
+         rcvDataMessage: function() {
+             gApp._outstanding -= 1;
+         },
+         sndDataMessage: function(d) {
+             console.log('Requesting: ' + d);
+            gApp._outstanding += d;
+        }
+     },
+
     _threadCreate: function() {
 
         var workerScript = worker.toString();
@@ -479,7 +493,18 @@ EXPORT_FIELD_LIST:
                 Rally.util.Ref.getUrl(record.get('TestCases')._ref):null,
 
         };
-        gApp._giveToThread(thread, msg);    //Send a wakeup message with an item
+        var outstanding = 
+            (msg.hasChildren?1:0) + 
+            (msg.hasDefects?1:0) + 
+            (msg.hasStories?1:0) + 
+            (msg.hasTasks?1:0) + 
+            (msg.hasTestCases?1:0);
+
+        if (outstanding) {
+            gApp.fireEvent('sndDataMessage',outstanding);
+            gApp._giveToThread(thread, msg);    //Send a wakeup message with an item
+        }
+
     },
 
     _getGridArtifacts: function() {
@@ -501,6 +526,7 @@ EXPORT_FIELD_LIST:
         //Records come back as raw info. We need to make proper Rally.data.WSAPI.Store records out of them
         if (msg.data.reply === 'Data') {
             var records = [];
+            gApp.fireEvent('rcvDataMessage');
 
             _.each(msg.data.records, function(item) {
                 switch (item._type) {
@@ -531,6 +557,9 @@ EXPORT_FIELD_LIST:
 
             
         }
+        else {
+            console.log("Received: " + msg);
+        }
         var thread = _.find(gApp._runningThreads, { id: msg.data.id});
         gApp._setThreadState(thread, 'Asleep');
         //Farm out more if needed
@@ -546,7 +575,7 @@ EXPORT_FIELD_LIST:
     },
 
     _allThreadsIdle: function() {
-        return _.every(gApp._runningThreads, function(thread) {
+        return (gApp._outstanding === 0) && _.every(gApp._runningThreads, function(thread) {
             return gApp._checkThreadState(thread) === 'Asleep';
         });
     },
@@ -836,7 +865,7 @@ EXPORT_FIELD_LIST:
                 smallString += ',' + (item.data.Attachments?item.data.Attachments.Size:0);
                 smallString += ',' + item.ChildAttachments.Size;
             }
-            console.log(smallString);
+            // console.log(smallString);
         }
         return smallString + '\n';
     },
@@ -936,6 +965,7 @@ EXPORT_FIELD_LIST:
                 return;
 
         } else {
+            console.log("sending default response to: ", msg);
             defaultReply();
         }
     }
