A few bug fixes

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -246,15 +246,24 @@ EXPORT_FIELD_LIST:
         return deferred.promise;
     },
 
+    _getExportColumns: function(){
+        var grid = this.down('rallygridboard').getGridOrBoard();
+        if (grid){
+            return _.filter(grid.columns, function(item){ return (item.dataIndex && item.dataIndex != "DragAndDropRank"); });
+        }
+        return [];
+    },
+
     //Entry point for export
     _exportCSV: function(rs) {
-        Ext.create("Niks.Apps.TreeExporter").exportCSV(gApp._createTree(gApp._nodes));
+        Ext.create("Niks.Apps.TreeExporter", {
+            fields: _.pluck(gApp._getExportColumns(), "dataIndex")
+        }).exportCSV(gApp._createTree(gApp._nodes));
         gApp.setLoading(false);
     },
 
     launch: function() {
         gApp = this;
-        gApp._nodes = [ gApp.WorldViewNode ];
         
         var loadModels = [];
         loadModels.push(gApp._getUserStoryModel);
@@ -508,6 +517,7 @@ EXPORT_FIELD_LIST:
     },
 
     _getGridArtifacts: function() {
+        gApp._nodes = [ gApp.WorldViewNode ];
         gApp.setLoading('Fetching hierarchical data');
         gApp._getArtifacts(gApp.down('rallygridboard').getGridOrBoard().getStore().getTopLevelNodes());
     },
@@ -875,7 +885,7 @@ EXPORT_FIELD_LIST:
         var textOut = '';
         var valid = true;
         var fieldRow = '';
-        var specialFields = ['Attachments'];    //Dealt with individually below
+        var specialFields = ['Attachments', 'FormattedID', 'Name'];    //Dealt with individually in this code
 
         var printFields = _.filter(this.fields, function(field) {
             return !(_.contains(specialFields, field));
