Fix error in path generation

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -926,8 +926,8 @@ EXPORT_FIELD_LIST:
         //The 'tree' item is the root item, but there is inconsistency in the types lower down Feature->Story->Defect or Feature->Story->Task
         var path = _.find( tree.descendants(), function(item) {
             return item.depth === tree.height;
-        }).path(tree.children[0]);
-
+        }).path(tree);
+        path.pop(); //Get rid of R0
         var i = 0;
         console.log('About to pop from: ', tree);
         for ( i = 0; i < tree.height; i++ ) {
